# agents-remote-core

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/decisions/: 0001-defer-typescript-rewrite.md
src/agent_remote_core/: __main__.py
src/agent_remote_core/server/: server.py
src/agent_remote_core/utils/: session.py
src/agent_remote_daemon/: __main__.py
src/agent_remote_daemon/parsers/: claude_parser.py  codex_parser.py
src/agent_remote_daemon/server/: __init__.py  rich_text_renderer.py  server.py  shared_state.py
src/agent_remote_daemon/utils/: session.py
src/agents_remote_core/: __main__.py
src/agents_remote_core/parsers/: __init__.py  base_parser.py
src/agents_remote_core/server/: component_parser.py  hooks.py  server.py  shared_state.py
src/agents_remote_core/utils/: __init__.py  protocol.py  session.py
