[project]
name = "agent-remote-daemon"
version = "0.1.0"
description = "PTY-based daemon that mirrors Claude/Codex CLI sessions to a shared-memory snapshot, with TUI-mirror (tmux pipe-pane) support."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "xluos" }]
dependencies = [
    "pyte>=0.8.0",
]

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0.0"]

[project.scripts]
agent-remote-daemon = "agent_remote_daemon.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_remote_daemon"]
