[project]
name = "agents-remote-core"
version = "0.1.0"
description = "Short-lived PTY-host runtime for Claude/Codex CLI agents. Wraps one CLI per process, reverse-parses ANSI into a structured ClaudeWindow snapshot, exposes input over Unix socket. The reusable runtime layer under agents-remote / agentara / any third-party app."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "xluos" }]
dependencies = [
    "pyte>=0.8.0",
]

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0.0"]

[project.scripts]
agents-remote-core = "agents_remote_core.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_remote_core"]
